style.css
:root {
    --main-bg-color: white;
    --main-text-color: black;
}

@media (prefers-color-scheme: dark) {
    --main-bg-color: black;
    --main-text-color: white;
    
    footer {
        background-color: rgb(30,30,30)
    }
    
    a:visited {
        color:blueviolet;
    }
}


@font-face { 
    font-family: Comfortaa; src: url(font/Comfortaa-VariableFont_wght.ttf); 
}

body {
    font-family: Comfortaa, sans-serif;
    transition: all 0.5s;
    background-color: var(--main-bg-color)
    color: var(--main-text-color)
}

footer {
    text-align: center;
    padding: 5px;
    background-color: darkgray;
}

#title {
    width: vw;
    border: 10px solid var(--main-text-color);
    padding: 50px;
    margin: auto;
    border-radius: 20px;
    text-align: center;
    background-image: url(img/title.jpeg);
    text-shadow:0px 0px 15px black;
    font-size: 35px;
    color: white;
}

.section-header {
    text-align: center;
    font-size: 25px;
    width: auto;
}

.text {
    font-size: 20px; 
}

.topnav {
  background-color: #333;
  overflow: hidden;
}

.topnav a {
  float: left;
  color: rgb(242, 242, 242);
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: rgb(220, 220, 220);
  color: black;
}

.topnav a.active {
  background-color: var(--main-text-color);
  color: var(--main-bg-color);
}

